--- a/yo_drive_client/src/components/bookingPage/paginator/paginator.module.css
+++ b/yo_drive_client/src/components/bookingPage/paginator/paginator.module.css
@@ -6,10 +6,29 @@
 
 .arrowButton {
     font-size: 16px;
-    margin: 0 5px;
+    margin: 0 10px;
     cursor: pointer;
+    background-color: transparent;
+    font-family: MontSerrat;
+    color: #d9d9d9;
+    border: none;
 }
 
 .activePage {
-    font-weight: bold;
+    font-size: 16px;
+    margin: 0 10px;
+    cursor: pointer;
+    background-color: #212528;
+    font-family: MontSerrat;
+    color: #d9d9d9;
+    border: none;
+}
+.unactivePage{
+    font-size: 16px;
+    margin: 0 10px;
+    cursor: pointer;
+    background-color: #212528;
+    font-family: MontSerrat;
+    color: #848181;
+    border: none;
 }
