--- a/yo_drive_client/src/components/privateOffice/office/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/story.module.css
@@ -208,3 +208,15 @@
 .starRating{
     margin-left: 10px;
 }
+.calendarStyles{
+    width: 230px;
+    height: 37px;
+    background-color: transparent;
+    color: #d9d9d9;
+    font-family: Montserrat;
+    font-size: 26px;
+    border: none;
+}
+input[type=month]::-webkit-calendar-picker-indicator {
+    opacity: 0;
+  }
