--- a/yo_drive_client/src/components/privateOffice/office/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/story.module.css
@@ -216,7 +216,19 @@
     font-family: Montserrat;
     font-size: 26px;
     border: none;
+    text-align: right;
 }
-input[type=month]::-webkit-calendar-picker-indicator {
-    opacity: 0;
-  }
+.calendarStyles:focus{
+    border: none;
+}
+.calendarStyles::-webkit-calendar-picker-indicator {
+    color: transparent;
+    opacity: 1;
+    background: url(../../../assets/vectorLight.svg);
+    padding-bottom: 2px;
+    padding-left: 5px;
+    cursor: pointer;
+    width: 13px;
+    height: 16px;
+    margin-left: 5px;
+}
