--- a/yo_drive_client/src/components/privateOffice/office/editCarPopUp.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/editCarPopUp.module.css
@@ -1,6 +1,6 @@
 .popupBox {
     position: fixed;
-    background: rgba(0, 0, 0, 0.3);
+    background: #0000004d;
     width: 100%;
     height: 100vh;
     top: 0;
