--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -179,7 +179,7 @@
     margin-top: 37px;
     justify-content: space-between;
 }
-.buttonPrewiev{
+.buttonPreview{
     width: 315px;
     height: 50px;
     font-family: Montserrat;
@@ -237,4 +237,52 @@
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 300;
+}
+.buttonPreviewActive{
+    background:  #212528;
+    color: #d9d9d9;
+    border: 1px solid #d9d9d9;
+    width: 315px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    border-radius: 2px;
+}
+.buttonPreviewNotActive{
+    background:  #d9d9d9;
+    border-color: #212528;
+    color: #212528;
+    border: 1px solid #212528;
+    width: 315px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    border-radius: 2px;
+    border-style: none;
+}
+.buttonAddActive{
+    width: 197px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    background:  #212528;
+    color: #d9d9d9;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+}
+.buttonAddNotActive{
+    background:  #d9d9d9;
+    border-color: #212528;
+    color: #212528;
+    border: 1px solid #212528;
+    width: 197px;
+    height: 50px;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    border-radius: 2px;
+    border-style: none;
 }
