--- a/yo_drive_client/src/components/privateOffice/office/story.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/story.module.css
@@ -232,3 +232,13 @@
     height: 16px;
     margin-left: 5px;
 }
+.listItemsEmpty{
+    font-family: Montserrat;
+    font-size: 24px;
+    opacity: 0.9;
+    color: #D9D9D9;
+    width:auto;
+    height: 180px;
+    text-align: center;
+    margin-top: 55px;
+}
