--- a/yo_drive_client/src/components/privateOffice/office/filterPopUp.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/filterPopUp.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     background-color: #d9d9d9;
     width: 937px;
-    height: 162px;
+    height: 132px;
     margin-top: 144px;
     z-index: 2;
     border: solid;
@@ -79,16 +79,17 @@
 .formButton{
     justify-content: right;
     width: 165px;
-    height: 30px;
+    height: 25px;
     font-family: Montserrat;
     font-size: 16px;
     font-weight: 600;
     background-color: #212528;
     color: #D9D9D9;
     border: none;
-    margin-top: 8px;
-    margin-left: auto;
-    margin-right: 42px;
+    margin-top: 15px;
+    padding-left: 6px;
+    margin-left: 12px;
+    margin-right: 6px;
 }
 
 .formButton:hover {
