--- a/yo_drive_client/src/components/privateOffice/office/preview.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/preview.module.css
@@ -77,7 +77,7 @@
 }
 .rewievQuantity{
     font-size: 14px;
-    margin: 0 0 0 10px;
+    margin: 3px 0 0 10px;
     font-weight: 400;
     opacity: 0.8;
 }
