--- a/yo_drive_client/src/components/bookingPage/popup/bookingPageFeedbackPopup.module.css
+++ b/yo_drive_client/src/components/bookingPage/popup/bookingPageFeedbackPopup.module.css
@@ -225,3 +225,12 @@ input[type='range']::-webkit-slider-thumb {
     text-align: center;
     margin-top: 85px;
 }
+.rewiewTextEmpty{
+  min-height: 40px;
+  max-height: 200px;
+  width: 690px;
+  overflow: auto;
+  margin-top: 12px;
+  padding-right: 2px;
+  opacity: 0.8;
+}
