--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -151,6 +151,7 @@
     font-weight: 300;
     color: #d9d9d9;
     width: 250px;
+    margin-top: 14px;
 }
 .buttonImg:hover{
     cursor: pointer;
@@ -285,4 +286,7 @@
     font-weight: 300;
     border-radius: 2px;
     border-style: none;
+}
+.imgIcon{
+    display: none;
 }
