--- a/yo_drive_client/src/components/privateOffice/office/editCarPopUp.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/editCarPopUp.module.css
@@ -109,7 +109,7 @@
     border-color: #212528;
     font-family: Montserrat;
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
     padding-left: 16px;
 }
 .listItem{
@@ -198,7 +198,7 @@
     border-color: #212528;
     font-family: Montserrat;
     font-size: 18px;
-    font-weight: 300;
+    font-weight: 400;
     padding-left: 16px;
     background: none;
 }
@@ -231,4 +231,5 @@
     border-bottom: #212528;
     border-bottom: solid;
     border-width: 1px;
+    padding-left: 16px;
 }
