--- a/yo_drive_client/src/components/privateOffice/office/office.module.css
+++ b/yo_drive_client/src/components/privateOffice/office/office.module.css
@@ -153,6 +153,15 @@
     width: 250px;
     margin-top: 14px;
 }
+.buttonImgSave{
+    background-color: #212528;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 300;
+    color: #d9d9d9;
+    width: 250px;
+}
 .buttonImg:hover{
     cursor: pointer;
     color: #ffffff;
